workshop03/nwapp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nwapp-v2deploy
    labels:
        app: northwind

spec:
    replicas: 3
    selector:
        matchLabels:
            app: nwapp-v2pod

    template:
        metadata:
            name: nwapp-v2pod
            labels:
                app: nwapp-v2pod
        spec:
            containers:
            - name: nw-container
              image: stackupiss/northwind-app:v2
              imagePullPolicy: IfNotPresent
              ports:
              - name: nwapp-v2port
                containerPort: 3000
              livenessProbe:
                initialDelaySeconds: 5
                periodSeconds: 30
                timeoutSeconds: 5
                failureThreshold: 3
                httpGet:
                    path: /health
                    port: nwapp-v2port
---
apiVersion: v1
kind: Service
metadata:
    name: nwapp-v2svc
    labels:
        app: northwind
spec:
    type: ClusterIP
    selector:
        app: nwapp-v2pod
    ports:
    - name: app-port
      port: 8080
      targetPort: nwapp-v2port
