workshop03/nwapp1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nwapp-deploy
    labels:
        app: northwind

spec:
    replicas: 3
    selector:
        matchLabels:
            app: nwapp-pod

    template:
        metadata:
            name: nwapp-pod
            labels:
                app: nwapp-pod
        spec:
            containers:
            - name: nw-container
              image: zeckem/northwind_node:v1
              imagePullPolicy: IfNotPresent
              resources:
                requests:
                    cpu: 100m
              ports:
              - name: nwapp-port
                containerPort: 3000
              livenessProbe:
                initialDelaySeconds: 5
                periodSeconds: 30
                timeoutSeconds: 5
                failureThreshold: 3
                httpGet:
                    path: /health
                    port: nwapp-port
---
apiVersion: v1
kind: Service
metadata:
    name: nwapp-svc
    labels:
        app: northwind
spec:
    type: ClusterIP
    selector:
        app: nwapp-pod
    ports:
    - name: app-port
      port: 8080
      targetPort: nwapp-port
