workshop03/fortune-deploy2.yaml
---
apiVersion: v1
kind: Namespace
metadata:
   name: myns
   labels: 
      dept: engineering

---
# write deployment
apiVersion: apps/v1
kind: Deployment
metadata:
   name: fortune-deploy
   labels:
      app: fortune

spec:
   replicas: 2

   selector:
      matchLabels:
         app: fortune-pod

   template:
      # pod yaml 
      metadata:
         name: fortune-pod
         labels:
            dept: engineering 
            app: fortune-pod
      spec:
         containers:
         - name: fortune-container
           image: chukmunnlee/fortune:v1
           imagePullPolicy: IfNotPresent
           ports:
           - name: http-port 
             containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
    name: fortune-svc
    labels:
        app: fortune
spec:
    type: ClusterIP
    selector:
        app: fortune-pod
    ports:
    - name: fortune-port
      port: 8080
      targetPort: nwapp-port

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
      name: fortune-ing
      labels:
         app: fortune
      annotations:
         kubernetes.io/ingress.class: "nginx"

spec:
      rules:
      - host: 
      http:
         paths:
         - path: /
            backend:
            serviceName: fortune-svc
            servicePort: fortune-port
